[tool.poetry]
name = "wueshop-ai-forms"
version = "0.1.1"
description = "Wuerzburg Formular Helper Agent"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
langchain = ">=0.1.6"
langgraph = ">=0.0.23"
pydantic = ">=2.0"
langchain-openai = ">=0.0.2"
openai = ">=1.3.7"
langchainhub = ">=0.1.14"
tiktoken = ">=0.6.0"
python-dotenv = "^1.0.1"
streamlit = "^1.32.2"
pdfminer-six = "^20231228"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"